modified:   app.py 	deleted:    app_old.py 	new file:   create_log.py 	new file:   image/output_image_2025-04-27_22-56-54.png 	new file:   image/output_image_2025-04-27_23-01-19.png 	new file:   image/output_image_2025-04-27_23-02-07.png 	new file:   log/2025-04-27_session.log 	deleted:    main doesnt save n inventory probl.py 	deleted:    main old functional.py 	modified:   main_flask.py 	new file:   prompts.py 	renamed:    default_image.png -> static/default_image.png 	renamed:    image/Arin.png -> static/image/Arin.png 	renamed:    image/Eira.png -> static/image/Eira.png 	renamed:    image/Luminaria.png -> static/image/Luminaria.png 	renamed:    image/Lyra.png -> static/image/Lyra.png 	renamed:    image/Lyra_throne.png -> static/image/Lyra_throne.png 	renamed:    image/bolsa_inventario.png -> static/image/bolsa_inventario.png 	renamed:    image/livro_magia.png -> static/image/livro_magia.png 	renamed:    image/luminaria_palace.png -> static/image/luminaria_palace.png 	renamed:    image/output_image_2024-12-02_19-33-56.png -> static/image/output_image_2024-12-02_19-33-56.png 	renamed:    image/output_image_2024-12-02_19-34-52.png -> static/image/output_image_2024-12-02_19-34-52.png 	renamed:    image/output_image_2024-12-02_19-36-17.png -> static/image/output_image_2024-12-02_19-36-17.png 	renamed:    image/output_image_2024-12-02_19-38-54.png -> static/image/output_image_2024-12-02_19-38-54.png 	renamed:    image/output_image_2024-12-02_19-40-57.png -> static/image/output_image_2024-12-02_19-40-57.png 	renamed:    image/output_image_2024-12-02_19-41-13.png -> static/image/output_image_2024-12-02_19-41-13.png 	renamed:    image/output_image_2024-12-02_19-42-16.png -> static/image/output_image_2024-12-02_19-42-16.png 	renamed:    image/output_image_2024-12-02_20-14-47.png -> static/image/output_image_2024-12-02_20-14-47.png 	renamed:    image/output_image_2024-12-02_20-21-23.png -> static/image/output_image_2024-12-02_20-21-23.png 	renamed:    image/output_image_20

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,52 +26,11 @@
                             e cada aventura é completamente única.
                         </p>
                         <div class="d-grid gap-2 col-4 mx-auto mt-2">
-                            <a href="{{ url_for('character_creation') }}" class="btn btn-primary btn-lg">Nova Aventura</a>
-                           <!--
-                            <a href="{{ url_for('load_game') }}" class="btn btn-outline-secondary btn-lg">Continuar</a>
-                            -->
+                            <a href="{{ url_for('game') }}" class="btn btn-primary btn-lg">Nova Aventura</a>
                         </div>
                     </div>
                 </div>
-<!--                 
-                <div class="card bg-dark">
-                    <div class="card-header">
-                        <h3>Características do Jogo</h3>
-                    </div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <h4><i class="fas fa-map-marked-alt"></i> Mundo Dinâmico</h4>
-                                    <p>Explore um rico mundo de fantasia com locais, personagens e missões diversas.</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <h4><i class="fas fa-robot"></i> Interações com IA</h4>
-                                    <p>Cada conversa e cena é gerada pela nossa IA.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row mt-4">
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <h4><i class="fas fa-images"></i> Narrativa Visual</h4>
-                                    <p>Cada momento da sua aventura é visualizado através de imagens geradas por IA.</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <h4><i class="fas fa-gamepad"></i> Mecânicas de RPG</h4>
-                                    <p>Crie seu personagem, ganhe experiência e faça escolhas significativas.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
--->        
+        
         <footer class="text-center mt-5 mb-4">
             <p class="text-muted">RPG com IA &copy; 2024 - SMCNetwolf</p>
         </footer>
