--- a/templates/game.html
+++ b/templates/game.html
@@ -27,12 +27,13 @@
                                     class="img-fluid" />
                             </div>
                             <div class="col-12 mb-3">
-                                <!-- Debug: Raw output = {{ output }} | Raw chat_history = {{ chat_history }} -->
-                                <div id="gameText" class="mb-3">
-                                    <p>{{ output }}</p>
-                                </div>
+                                {% if output %}
+                                    <div id="gameText" class="mb-3">
+                                        <p>{{ output }}</p>
+                                    </div>
+                                {% endif %}
                                 <div id="chatHistory" class="mb-3">
-                                    <p>{{ chat_history }}</p>
+                                    <p style="white-space: pre-wrap;">{{ chat_history }}</p>
                                 </div>
                             </div>
                         </div>
@@ -55,6 +56,7 @@
 
                 <div class="mt-3">
                     <form action="/save_game" method="POST" class="d-inline-block">
+                        <input type="text" name="filename" placeholder="Nome do save" class="form-control d-inline-block w-auto">
                         <button type="submit" class="btn btn-success">Salvar Jogo</button>
                     </form>
                     <form action="/retrieve_game" method="POST" class="d-inline-block ms-2">
