modified:   app.py 	modified:   create_log.py 	deleted:    fofoca.txt 	modified:   main_flask  com som.py 	modified:   main_flask.py 	modified:   prompts.py 	modified:   requirements.txt 	new file:   static/image/output_image_2025-05-07_11-37-56.png 	new file:   static/image/output_image_2025-05-07_13-47-11.png 	new file:   static/image/output_image_2025-05-07_14-10-24.png 	new file:   static/image/output_image_2025-05-07_14-22-03.png 	new file:   static/image/output_image_2025-05-07_14-25-56.png 	new file:   static/image/output_image_2025-05-07_14-26-34.png 	new file:   static/image/output_image_2025-05-07_14-28-56.png 	new file:   static/image/output_image_2025-05-07_14-33-08.png 	new file:   static/image/output_image_2025-05-07_14-33-41.png 	new file:   static/image/output_image_2025-05-07_14-38-01.png 	new file:   static/image/output_image_2025-05-07_14-38-43.png 	new file:   static/image/output_image_2025-05-07_14-39-26.png 	new file:   static/image/output_image_2025-05-07_14-40-01.png 	new file:   static/image/output_image_2025-05-07_14-40-25.png 	new file:   static/image/output_image_2025-05-07_14-42-28.png 	new file:   static/image/output_image_2025-05-07_14-43-19.png 	new file:   static/image/output_image_2025-05-07_14-43-53.png 	new file:   static/image/output_image_2025-05-07_14-44-30.png 	new file:   static/image/output_image_2025-05-07_14-45-23.png 	new file:   static/image/output_image_2025-05-07_14-45-58.png 	new file:   static/image/output_image_2025-05-07_14-47-17.png 	new file:   static/image/output_image_2025-05-07_14-48-01.png 	new file:   static/image/output_image_2025-05-07_14-48-56.png 	new file:   static/image/output_image_2025-05-07_14-52-15.png 	new file:   static/image/output_image_2025-05-07_14-53-32.png 	new file:   static/image/output_image_2025-05-07_14-56-19.png 	new file:   static/image/output_image_2025-05-07_17-40-51.png 	new file:   static/image/output_image_2025-05-07_17-41-52.png 	new file:   static/image/output_image_2025-05-07

--- a/templates/game.html
+++ b/templates/game.html
@@ -72,6 +72,9 @@
                     <form action="/new_game" method="POST" class="d-inline-block">
                         <button type="submit" class="btn btn-warning ms-2">Iniciar Novo Jogo</button>
                     </form>
+                    {% if session.user_id %}
+                        <a href="{{ url_for('logout') }}" class="btn btn-danger ms-2">Sair</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
