--- a/templates/index.html
+++ b/templates/index.html
@@ -25,14 +25,23 @@
                             Embarque nessa jornada épica onde suas escolhas moldam a narrativa e as imagens,
                             e cada aventura é completamente única.
                         </p>
-                        <div class="d-grid gap-2 col-4 mx-auto mt-2">
-                            <a href="{{ url_for('game') }}" class="btn btn-primary btn-lg">Nova Aventura</a>
+                        <div class="btn mt-2">
+                            {% if session.user_id %}
+                            <a href="{{ url_for('game') }}" class="btn btn-primary btn-lg">Aventurar-se</a>
+                            {% else %}
+                            <a href="{{ url_for('login') }}" class="btn btn-primary btn-lg">Entrar</a>
+                            {% endif %}
+                        </div>
+                        <div>    
+                            {% if session.user_id %}
+                                <a href="{{ url_for('logout') }}" class="btn btn-danger btn-lg mt-2">Sair</a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
         
         <footer class="text-center mt-5 mb-4">
-            <p class="text-muted">RPG com IA &copy; 2024 - SMCNetwolf</p>
+            <p class="text-muted">RPG com IA © 2024 - SMCNetwolf</p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
